<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RecipeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewRecipeName"
            android:layout_width="147dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="Name:"
            android:textColor="@color/black"
            android:textSize="17dp" />

        <EditText
            android:id="@+id/editTextRecipeName"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Recipe Name"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewRecipeCookTime"
            android:layout_width="141dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="Cook Time:"
            android:textColor="@color/black"
            android:textSize="17dp" />

        <EditText
            android:id="@+id/editTextRecipeCookTime"
            android:layout_width="309dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="Recipe Cook Time"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewRecipeServingSize"
            android:layout_width="139dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="Serving Size:"
            android:textColor="@color/black"
            android:textSize="17dp" />

        <EditText
            android:id="@+id/editTextRecipeServingSize"
            android:layout_width="243dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Recipe Serving Size"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewRecipeCategory"
            android:layout_width="139dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="Category:"
            android:textColor="@color/black"
            android:textSize="17dp" />

        <EditText
            android:id="@+id/editTextRecipeCategory"
            android:layout_width="266dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Recipe Category"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewRecipeComment"
            android:layout_width="139dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="Comments:"
            android:textColor="@color/black"
            android:textSize="17dp" />

        <EditText
            android:id="@+id/editTextRecipeComment"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Recipe Comments" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:paddingTop="10dp"
        android:text="@string/selectIngredients"
        android:textColor="@color/black"
        android:textAlignment="center" />

    <ListView
        android:id="@+id/ingredients_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="100" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/recipeImageView"
                android:layout_width="210dp"
                android:layout_height="178dp"
                android:layout_gravity="center"></ImageView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/takePhotoButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Take Photo"></Button>

                <Button
                    android:id="@+id/choosePhotoButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Choose Photo"></Button>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>