...
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:visibility="gone"
            tools:visibility="gone">

            <ListView
                android:id="@+id/meal_plan_recipe_list_ID"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp"
                android:scrollbarSize="2dp"
                android:choiceMode="singleChoice"
...
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible"
        android:orientation="horizontal">

        <Button
            android:id="@+id/scale_meal_plan_ID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#00FFFFFF"
            android:stateListAnimator="@null"
            android:text="Scale All Recipes"
...
